--- a/integradora/styles/style.css
+++ b/integradora/styles/style.css
@@ -46,6 +46,7 @@ section {
 #main #nombre {
     grid-column: 1 / -1;
     text-align: center;
+    height: 10vh;
     text-align: left;
     padding: 2%;
 }
