--- a/integradora/styles/style.css
+++ b/integradora/styles/style.css
@@ -46,7 +46,6 @@ section {
 #main #nombre {
     grid-column: 1 / -1;
     text-align: center;
-    height: 10vh;
     text-align: left;
     padding: 2%;
 }
@@ -122,7 +121,7 @@ section {
 
 #stadAd {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
     grid-column: 1 / -1;
     gap: 1rem;
     padding: 5%;
@@ -172,16 +171,11 @@ section {
     background-color: #ffab00;
 }
 
-.grafica {
-    height: 40vh;
-}
-.grafica.ext {
-    height: 70vh;
+canvas {
+    width: 95% !important;
+    height: auto !important; /* Asegura que el canvas mantenga la proporción sin deformarse */
 }
 
-canvas {
-    width: 100% !important;
-}
 
 
 /* Ajustes para pantallas muy pequeñas (móviles compactos) */
@@ -194,12 +188,9 @@ canvas {
         grid-template-columns: repeat(2,1fr);
     }
     .grafica {
-        height: 22vh;
         padding: 0.8rem;
     }
-    .grafica.ext {
-        height: 35vh;
-    }
+
     #nuevaO {
         padding: 0.3rem 0.8rem;
         font-size: 0.8rem;
@@ -210,7 +201,3 @@ canvas {
     }
 }
 
-
-.user {
-    display: none !important;
-}
