--- a/integradora/styles/detalleO.css
+++ b/integradora/styles/detalleO.css
@@ -35,6 +35,18 @@ body {
     gap: 1rem;
     padding: 1%;
 }
+#general {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1%;
+}
+
+.sec {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 1%;
+    background-color:var(--color-background) ;
+}
 
 h2 {
     grid-column: span 12;
@@ -85,21 +97,28 @@ h3 {
     color: var(--color-primary);
     font-size: 1.2rem;
 }
+#productos-container {
+    height: 30vh;
+    overflow-y: auto;
+    padding: 0.5rem;
+    border: 1px solid var(--color-border); /* Opcional, para definir límites visuales */
+    border-radius: 8px; /* Opcional, para un diseño más estético */
+    background-color: var(--color-white); /* Opcional, asegura un fondo consistente */
+    box-shadow: 0 2px 6px var(--color-shadow); /* Opcional, para dar profundidad */
+}
 
 #detalles .products {
-    margin-top: 5%;
     display: grid;
     grid-template-columns: 1fr 6fr 3fr;
-    gap: 1rem;
+    margin:2%
 }
 #detalles div{
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 1%;
+    background-color: white;
 }
 #detalles .Otdatas {
-    margin-top: 5%;
-    margin-right: 5%;
     display: grid;
     grid-template-columns: 2fr 6fr; /* Dos columnas, la primera un poco más amplia */
     gap: 1rem;
@@ -122,5 +141,10 @@ h3 {
     border: 1px solid var(--color-white); /* Borde acorde a tu esquema de colores */
     font-size: 1rem;
 }
+#enviarOr {
+    width: 50%;
+}
+
+
 
 
