--- a/integradora/styles/detalleO.css
+++ b/integradora/styles/detalleO.css
@@ -48,7 +48,7 @@ body {
     background-color:var(--color-background) ;
 }
 
-h2 {
+main h2 {
     grid-column: span 12;
     text-align: center;
     color: var(--color-primary) !important;
@@ -93,9 +93,8 @@ select:disabled {
     grid-column: span 3;
 }
 
-h3 {
-    color: var(--color-primary);
-    font-size: 1.2rem;
+#detalles h3 {
+    font-size: 2rem;
 }
 #productos-container {
     height: 30vh;
@@ -123,9 +122,6 @@ h3 {
     grid-template-columns: 2fr 6fr; /* Dos columnas, la primera un poco más amplia */
     gap: 1rem;
 }
-h3 {
-    font-size: 2rem;
-}
 
 #enviarOr {
     display: none;
@@ -141,8 +137,24 @@ h3 {
     border: 1px solid var(--color-white); /* Borde acorde a tu esquema de colores */
     font-size: 1rem;
 }
+
+.error {
+    background-color: rgba(170, 15, 44, 0.5);
+    padding: 1%;
+    padding-left: 10%;
+}
+
 #enviarOr {
-    width: 50%;
+    width: 100%;
+}
+
+/* Personalizar la alerta de SweetAlert */
+.swal-wide {
+    padding-bottom: 30px !important; /* Añade espacio adicional al final del contenido */
+}
+
+.swal-button-spacing {
+    margin-top: 20px !important; /* Añade espacio superior al botón */
 }
 
 
