--- a/integradora/styles/orden.css
+++ b/integradora/styles/orden.css
@@ -210,7 +210,7 @@ body {
 
 
 /* Estilo general para los botones */
-button {
+tr button {
   border: none;
   cursor: pointer;
   display: inline-flex;
@@ -223,7 +223,7 @@ button {
 }
 
 /* Efecto hover genérico */
-button:hover {
+tr button:hover {
   transform: scale(1.1); /* Aumenta el tamaño ligeramente */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra elegante */
 }
