--- a/integradora/styles/detalleO.css
+++ b/integradora/styles/detalleO.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 1rem;
+    overflow-x: hidden;
 }
 
 #DetalleO {
@@ -221,7 +222,7 @@ select:disabled {
     }
 
     #DetalleO {
-        width: 95%;
+        width: 87%;
         padding: 6%;
     }
 
