--- a/integradora/styles/style.css
+++ b/integradora/styles/style.css
@@ -136,7 +136,7 @@ section {
 
 #stadAd {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(4,1fr);
     grid-column: 1 / -1;
     gap: 1rem;
     padding: 5%;
@@ -302,7 +302,7 @@ canvas {
         text-align: center;
     }
 }
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 769px) {
     #main {
         grid-template-columns: repeat(2, 1fr);
         gap: 1.5rem;
