--- a/integradora/styles/formularios.css
+++ b/integradora/styles/formularios.css
@@ -98,6 +98,8 @@
     all: unset;
     cursor: pointer;
     font-weight: bold;
+    margin-left: 80%;
+    color: white;
 }
 #salirP:hover {
     color: var(--color-primary);
